add student module
