# src/routes/router.ts
@@ -1,6 +1,6 @@
 import * as express from "express";
-import UserSignUp from "../core/consultant/register";
-import UserLogin from "../core/consultant/login";
+import consultantRouter from "./consultant.router";
+import studentRouter from "./student.router";
 
 const router = express.Router();
 
@@ -11,18 +11,7 @@ router.get("/", (req, res) => {
  * define your routes over here
  * router.get('/universities', universitiesController);
  */
-router.post("/register", async (req, res) => {
-  let {email, password} = req.body;
-  let consultantSignUp = new UserSignUp(email, password);
-  const register = await consultantSignUp.register();
-  return res.json(register);
-});
-
-router.post("/login", async (req, res) => {
-  let {email, password} = req.body;
-  let consultantLogin = new UserLogin(email, password);
-  const login = await consultantLogin.login();
-  return res.json(login);
-});
+router.use("/consultant", consultantRouter);
+router.use("/student", studentRouter);
 
 export default router;
